Feature 3: include SQL databases for Cheese and Purcahses
