# server/public/swagger.json
@@ -6,7 +6,7 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
-			"ICheese": {
+			"Cheese": {
 				"properties": {
 					"id": {
 						"type": "number",
@@ -30,10 +30,53 @@
 					},
 					"image": {
 						"type": "string"
+					},
+					"createdAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"updatedAt": {
+						"type": "string",
+						"format": "date-time"
 					}
 				},
 				"required": [
 					"id",
+					"title",
+					"price",
+					"colour",
+					"description",
+					"category",
+					"image",
+					"createdAt",
+					"updatedAt"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ICheesePayload": {
+				"properties": {
+					"title": {
+						"type": "string"
+					},
+					"price": {
+						"type": "number",
+						"format": "double"
+					},
+					"colour": {
+						"type": "string"
+					},
+					"description": {
+						"type": "string"
+					},
+					"category": {
+						"type": "string"
+					},
+					"image": {
+						"type": "string"
+					}
+				},
+				"required": [
 					"title",
 					"price",
 					"colour",
@@ -44,11 +87,51 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"IPurchase": {
+			"Purchase": {
 				"properties": {
 					"id": {
 						"type": "string"
 					},
+					"userId": {
+						"type": "string"
+					},
+					"totalPrice": {
+						"type": "number",
+						"format": "double"
+					},
+					"totalItems": {
+						"type": "number",
+						"format": "double"
+					},
+					"cheeses": {
+						"items": {
+							"$ref": "#/components/schemas/Cheese"
+						},
+						"type": "array"
+					},
+					"createdAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"updatedAt": {
+						"type": "string",
+						"format": "date-time"
+					}
+				},
+				"required": [
+					"id",
+					"userId",
+					"totalPrice",
+					"totalItems",
+					"cheeses",
+					"createdAt",
+					"updatedAt"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"IPurchasePayload": {
+				"properties": {
 					"userId": {
 						"type": "string"
 					},
@@ -65,13 +148,12 @@
 					},
 					"cheeses": {
 						"items": {
-							"$ref": "#/components/schemas/ICheese"
+							"$ref": "#/components/schemas/Cheese"
 						},
 						"type": "array"
 					}
 				},
 				"required": [
-					"id",
 					"userId",
 					"totalPrice",
 					"totalItems",
@@ -104,7 +186,7 @@
 							"application/json": {
 								"schema": {
 									"items": {
-										"$ref": "#/components/schemas/ICheese"
+										"$ref": "#/components/schemas/Cheese"
 									},
 									"type": "array"
 								}
@@ -112,11 +194,80 @@
 						}
 					}
 				},
+				"tags": [
+					"Cheese"
+				],
 				"security": [],
 				"parameters": []
+			},
+			"post": {
+				"operationId": "CreateCheese",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Cheese"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Cheese"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/ICheesePayload"
+							}
+						}
+					}
+				}
 			}
 		},
-		"/cheeses/{cheeseId}/{weight}": {
+		"/cheeses/{id}": {
+			"get": {
+				"operationId": "GetCheese",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/Cheese"
+										}
+									],
+									"nullable": true
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Cheese"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/cheeses/{id}/{weight}": {
 			"get": {
 				"operationId": "GetCheeseTotalPrice",
 				"responses": {
@@ -133,11 +284,14 @@
 						}
 					}
 				},
+				"tags": [
+					"Cheese"
+				],
 				"security": [],
 				"parameters": [
 					{
 						"in": "path",
-						"name": "cheeseId",
+						"name": "id",
 						"required": true,
 						"schema": {
 							"type": "string"
@@ -164,14 +318,18 @@
 							"application/json": {
 								"schema": {
 									"items": {
-										"$ref": "#/components/schemas/IPurchase"
+										"$ref": "#/components/schemas/Purchase"
 									},
-									"type": "array"
+									"type": "array",
+									"nullable": true
 								}
 							}
 						}
 					}
 				},
+				"tags": [
+					"Purchase"
+				],
 				"security": [],
 				"parameters": [
 					{
@@ -194,12 +352,15 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"type": "string"
+									"$ref": "#/components/schemas/Purchase"
 								}
 							}
 						}
 					}
 				},
+				"tags": [
+					"Purchase"
+				],
 				"security": [],
 				"parameters": [],
 				"requestBody": {
@@ -207,7 +368,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/IPurchase"
+								"$ref": "#/components/schemas/IPurchasePayload"
 							}
 						}
 					}
