# server/src/config/database.ts
@@ -1,0 +1,15 @@
+import { ConnectionOptions } from "typeorm";
+import { Cheese, Purchase } from '../entities'
+
+const config: ConnectionOptions = {
+    type: "postgres",
+    host: process.env.POSTGRES_HOST || "localhost",
+    port: Number(process.env.POSTGRES_PORT) || 5432,
+    username: process.env.POSTGRES_USER || "postgres",
+    password: process.env.POSTGRES_PASSWORD || "postgres",
+    database: process.env.POSTGRES_DB || "postgres",
+    entities: [Cheese, Purchase],
+    synchronize: true,
+};
+
+export default config;
