# server/src/controllers/purchases.ts
@@ -1,26 +1,17 @@
-import { Body, Get, Path, Post, Route } from "tsoa";
-const fs = require('fs');
-import * as _ from 'lodash';
-import IPurchase from "../interfaces/purchase";
+import { Body, Get, Path, Post, Route, Tags } from "tsoa";
+import { createPurchase, getPurchases, IPurchasePayload } from "../repositories/purchases.repository";
+import { Purchase } from "../entities/purchase.entity";
 
 @Route("purchases")
+@Tags("Purchase")
 export default class PurchaseController {
     @Get("/:userId")
-    public async getPurchases(@Path() userId: string): Promise<IPurchase[]> {
-        let rawdata = fs.readFileSync('data/purchases.json');
-        let purchases = JSON.parse(rawdata);
-        const usersPurchases = _.filter(purchases, { "userId": userId });
-        return usersPurchases;
+    public async getPurchases(@Path() userId: string): Promise<Array<Purchase> | null> {
+        return getPurchases(userId);
     }
 
     @Post("/create")
-    public async createPurchase(@Body() purchase: IPurchase): Promise<string> {
-        let rawdata = fs.readFileSync('data/purchases.json');
-        let purchases = JSON.parse(rawdata);
-        console.log('purchase', purchase);
-        fs.writeFile('data/purchases.json', JSON.stringify(purchases), (err: any) => {
-            if (err) throw err;
-        });
-        return 'Successfully Created Purchase!';
+    public async createPurchase(@Body() body: IPurchasePayload): Promise<Purchase> {
+        return createPurchase(body);
     }
 }
