# server/src/entities/cheese.entity.ts
@@ -1,0 +1,37 @@
+import {
+    Entity,
+    PrimaryGeneratedColumn,
+    Column,
+    CreateDateColumn,
+    UpdateDateColumn,
+} from "typeorm";
+
+@Entity()
+export class Cheese {
+    @PrimaryGeneratedColumn()
+    id!: number;
+
+    @Column()
+    title!: string;
+
+    @Column({ type: "numeric" })
+    price!: number;
+
+    @Column()
+    colour!: string;
+
+    @Column()
+    description!: string;
+
+    @Column()
+    category!: string;
+
+    @Column()
+    image!: string;
+
+    @CreateDateColumn()
+    createdAt!: Date;
+
+    @UpdateDateColumn()
+    updatedAt!: Date;
+}
