# server/src/interfaces/cheese.ts
@@ -1,9 +1,0 @@
-export default interface ICheese {
-    id: number
-    title: string
-    price: number
-    colour: string
-    description: string
-    category: string
-    image: string
-}
